--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -422,10 +422,15 @@
                     android:id="@+id/text_about_app"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:text="@string/about_app"
                     android:textColor="@color/text_color_primary"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="233dp"
+                    android:layout_marginEnd="233dp"
+                    android:layout_marginTop="20dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -505,6 +510,42 @@
             </RelativeLayout>
 
             <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/splitter_height"
+                android:layout_marginLeft="@dimen/list_item_padding_horizontal"
+                android:layout_marginRight="@dimen/list_item_padding_horizontal"
+                android:layout_weight="0"
+                android:background="@color/splitter_color_grey" />
+
+            <RelativeLayout
+                android:id="@+id/layout_push_service"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="@dimen/setting_padding_left"
+                android:paddingRight="@dimen/list_item_padding_horizontal">
+
+                <TextView
+                    android:id="@+id/text_push_enabled"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="@string/i_want_push_service"
+                    android:textColor="@color/text_color_primary"
+                    android:textSize="16dp" />
+
+                <CheckBox
+                    android:id="@+id/check_push_enabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="1dp"
+                    android:gravity="center"
+                    android:maxLines="1" />
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/splitter_height"
                 android:layout_marginLeft="@dimen/list_item_padding_horizontal"
